--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
+# Ignore Python virtual environment
+venv/
+.env/
+
+# Ignore Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+
+# Ignore macOS system files
+.DS_Store
+
+# Ignore build artifacts from React and Node.js
+node_modules/
+build/
+dist/
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Ignore Docker-related files
+.dockerignore
+docker-compose.override.yml
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Ignore Python environment files
+*.env
+*.venv
+*.virtualenv
+*.envrc
+
+# Ignore editor directories and temporary files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
