Add docker configurations to run the app via docker

--- a/backend-end-server-client/dockerfile
+++ b/backend-end-server-client/dockerfile
@@ -1,16 +1,16 @@
-#  Python Image
+# Python Image
 FROM python:3.10-slim
 
 WORKDIR /app
 
+# Copy the requirements file and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of your application code
 COPY . .
 
 # Expose the port the app runs on
 EXPOSE 8080
 
-# Define the command to run your application
+# Commnads to run the backend app
 CMD ["python", "main.py"]
