--- a/front-end-client/Dockerfile
+++ b/front-end-client/Dockerfile
@@ -1,16 +1,21 @@
-#  Node.js image 
+# Node.js Image
 FROM node:16
 
 WORKDIR /app
 
+# Copy package.json and package-lock.json
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
 
 COPY . .
 
+# Build the application
 RUN npm run build
 
+# Expose the port the app runs on
 EXPOSE 3000
 
+# Command to run the front end app
 CMD ["npm", "start"]
