--- a/front-end-client/package.json
+++ b/front-end-client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite" 
   },
   "dependencies": {
     "ag-grid-community": "^32.2.1",
